<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

   	<Button
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:text="@string/activity"
   	   	android:id="@+id/btnActivity"
   	   	android:onClick="btnActivityClick"/>
   	
   	
   	<Button
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:text="@string/dialog1"
   	   	android:id="@+id/btnDialog1"
   	   	android:onClick="btnDialog1Click"/>
   	
   	
   	<Button
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:text="@string/dialog2"
   	   	android:id="@+id/btnDialog2"
   	   	android:onClick="btnDialog2Click"/>
   	
   	<Button
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:text="@string/dialog3"
   	   	android:id="@+id/btnDialog3"
   	   	android:onClick="btnDialog3Click"/>
   	
   	<Button
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:text="@string/dialog4"
   	   	android:id="@+id/btnDialog4"
   	   	android:onClick="btnDialog4Click"/>
   	
   	<Button
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:text="@string/dialog5"
   	   	android:id="@+id/btnDialog5"
   	   	android:onClick="btnDialog5Click"/>
   	
   	<Button
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:text="@string/dialog6"
   	   	android:id="@+id/btnDialog6"
   	   	android:onClick="btnDialog6Click"/>
   	
   	
   	<Button
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:text="@string/dialog7"
   	   	android:id="@+id/btnDialog7"
   	   	android:onClick="btnDialog7Click"/>
    
</LinearLayout>